--- a/workflows/solr_queries/construct_a_query.Rmd
+++ b/workflows/solr_queries/construct_a_query.Rmd
@@ -17,14 +17,4 @@ In the second example, the DOI `PID` is surrounded in double quotes. This is bec
 ```
 
 
-To view the list of query-able parameters on the Arctic Data Center and their descriptions, you can visit <a href = 'https://arcticdata.io/metacat/d1/mn/v2/query/solr' target='_blank'>https://arcticdata.io/metacat/d1/mn/v2/query/solr</a>. The list of parameters is also provided below:
-
-```{r echo = FALSE, warning = FALSE, message = FALSE}
-library(magrittr)
-adc_solr <- httr::GET("https://arcticdata.io/metacat/d1/mn/v2/query/solr")
-
-adc_solr %>% 
-  stringr::str_extract_all("name>.*<") %>% 
-  unlist() %>% 
-  stringr::str_replace_all("name>|<", "")
-```
+To view the list of query-able parameters on the Arctic Data Center and their descriptions, you can visit <a href = 'https://arcticdata.io/metacat/d1/mn/v2/query/solr' target='_blank'>https://arcticdata.io/metacat/d1/mn/v2/query/solr</a>.
